# pythons-generated-sdks

./: Dockerfile  README.md  Taskfile.yml  app.py  client.py  sdk.Dockerfile  skaffold.yaml  spec.yaml  {{file_name}}.yaml
.github/: publish-sdks.yaml
.github/workflows/: publish-sdks.yaml
autorestt/: requirements.txt
autorestt/pets/: __init__.py  _client.py  _configuration.py  _vendor.py  clinet-autorest.py
fastapi_sdk/: README.md  client.py  setup.py
fastapi_sdk/.openapi-generator/: FILES
fastapi_sdk/fastapi_sdk/: __init__.py  api_client.py  configuration.py  rest.py  schemas.py
k8s/: deployment.yaml  secret.yaml  service.yaml
openapi_py_sdk/: .gitlab-ci.yml  .travis.yml  README.md  client.py  setup.py  tox.ini
openapi_py_sdk/fastapi_sdk/: __init__.py  api_client.py  configuration.py  rest.py  schemas.py
openapi_server-fastapi_sdk/: docker-compose.yaml  openapi.yaml  setup.cfg
openapi_server-fastapi_sdk/.openapi-generator/: FILES
openapi_server-fastapi_sdk/src/openapi_fastapi_sdk/: main.py  security_api.py
openapi_server-fastapi_sdk/src/openapi_fastapi_sdk/apis/: default_api.py
openapi_server-fastapi_sdk/src/openapi_fastapi_sdk/models/: http_validation_error.py  validation_error.py
openapi_server-fastapi_sdk/tests/: conftest.py  test_default_api.py
repos/: Taskfile.yaml  spec.yaml
repos/sdks/: .gitlab-ci.yml  README.md  setup.py
scripts/: cleanup-machine.sh  setup-machine.sh
sdks/: .travis.yml  setup.py
sdks/auth_sdk_v1beta/: __init__.py  api_client.py  configuration.py  (+3 more)
swagger_sdk/: README.md  client.py  client2.py  setup.py
(+94 files in other folders)
