[metadata]
name = openapi_fastapi_sdk
version = 0.1.0
description = This is an example of how to use the FastAPI SDK
long_description = file: README.md
keywords = OpenAPI FastAPI SDK Example
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
